--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -19,7 +19,7 @@
     <!--[if lt IE 9]><script src="http://a.tbcdn.cn/app/dp/s/html5/js/??html5shiv-min.js,modernizr-v2.5.3-min.js"></script><![endif]-->
     <!--[if gte IE 9]><!--><script src="http://a.tbcdn.cn/app/dp/s/html5/js/modernizr-v2.5.3-min.js"></script><!--<![endif]-->
     <script src="http://a.tbcdn.cn/??s/kissy/1.2.0/kissy-min.js,p/global/1.0/global-min.js,p/et/et.js?t=2012011120110301.js" type="text/javascript"></script>
-	<link media="screen" href="http://ouyangtao404.github.com/style/blog-template.css" rel="stylesheet"><!--<![endif]-->
+	<link media="screen" href="http://ouyangtao404.github.com/_style/blog-template.css" rel="stylesheet"><!--<![endif]-->
 
 </head>
 <body>
@@ -147,57 +147,5 @@
 	<p class="copyright"><a href="http://www.rankber.com/feed" title="RSS">RSS</a> | Theme <a class="themeName" href="http://www.rankber.com/" title="Optimus+">optimus+</a> design by <a href="http://jamiebicknell.tumblr.com/" rel="nofollow" title="J.Bicknell">J.Bicknell</a>|<script src="http://s94.cnzz.com/stat.php?id=4105057&web_id=4105057" language="JavaScript"></script></p>
 
 </footer>
-</body>
-</html>
-
-<!doctype html>
-<!--[if lt IE 7]><html class="no-js ie ie6 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 7]><html class="no-js ie ie7 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 8]><html class="no-js ie ie8 lte9 lte8"> <![endif]-->
-<!--[if IE 9]><html class="no-js ie ie9 lte9"> <![endif]-->
-<!--[if gt IE 9]><html class="no-js"><![endif]-->
-<!--[if !IE]><!--><html><!--<![endif]-->
-<head>
-    <meta charset="gbk">
-    <title>淘宝Html5模板</title>
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!-- 响应式设计代码 -->
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link type="image/x-icon" href="http://www.taobao.com/favicon.ico" rel="shortcut icon" />
-    <!-- html5reset and css3 -->
-    <link rel="stylesheet" href="http://a.tbcdn.cn/??p/global/1.0/global-min.css,app/dp/s/html5/css/common-min.css"/>
-    <!--[if lt IE 9]><script src="http://a.tbcdn.cn/app/dp/s/html5/js/??html5shiv-min.js,modernizr-v2.5.3-min.js"></script><![endif]-->
-    <!--[if gte IE 9]><!--><script src="http://a.tbcdn.cn/app/dp/s/html5/js/modernizr-v2.5.3-min.js"></script><!--<![endif]-->
-    <script src="http://a.tbcdn.cn/??s/kissy/1.1.6/kissy-min.js,p/global/1.0/global-min.js,p/et/et.js?t=2012011120110301.js" type="text/javascript"></script>
-</head>
-<body>
-    <div class="page">
-       <!-- 页头 begin -->
-       <header class="header">
-          <h1>Logo</h1>
-          <nav class="nav">
-              <ul class="nav-list">
-                  <li class="nav-item has-trans"><a href="#">首页</a></li>
-                  <li class="nav-item has-trans"><a href="#">二级频道</a></li>
-                  <li class="nav-item has-trans selected"><a href="#">二级频道</a></li>
-                  <li class="nav-item has-trans"><a href="#">二级频道</a></li>
-                  <li class="nav-item has-trans"><a href="http://www.zhifubao.com">二级频道</a></li>
-              </ul>
-          </nav>
-       </header>
-       <!-- 页头 end -->
-       <!-- 主体 begin -->
-       <div class="content">
-           Content
-       </div>
-       <!-- 主体 end -->
-       <!-- 页脚 begin -->
-       <footer class="footer">
-           <p>页脚内容</p>
-       </footer>
-       <!-- 页脚 end -->
-    </div>
 </body>
 </html>
