--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -19,7 +19,7 @@
     <!--[if lt IE 9]><script src="http://a.tbcdn.cn/app/dp/s/html5/js/??html5shiv-min.js,modernizr-v2.5.3-min.js"></script><![endif]-->
     <!--[if gte IE 9]><!--><script src="http://a.tbcdn.cn/app/dp/s/html5/js/modernizr-v2.5.3-min.js"></script><!--<![endif]-->
     <script src="http://a.tbcdn.cn/??s/kissy/1.2.0/kissy-min.js,p/global/1.0/global-min.js,p/et/et.js?t=2012011120110301.js" type="text/javascript"></script>
-	<link media="screen" href="http://ouyangtao404.github.com/_style/blog-template.css" rel="stylesheet"><!--<![endif]-->
+	<link media="screen" href="http://ouyangtao404.github.com/style/blog-template.css" rel="stylesheet"><!--<![endif]-->
 
 </head>
 <body>
