--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -20,6 +20,18 @@
     <!--[if gte IE 9]><!--><script src="http://a.tbcdn.cn/app/dp/s/html5/js/modernizr-v2.5.3-min.js"></script><!--<![endif]-->
     <script src="http://a.tbcdn.cn/??s/kissy/1.2.0/kissy-min.js,p/global/1.0/global-min.js,p/et/et.js?t=2012011120110301.js" type="text/javascript"></script>
 	
+	<?php 
+		switch ($_SERVER['HTTP_HOST']) { 
+		    case 'localhost:4000': 
+		        echo '<link media="screen" href="http://localhost:4000/jekyll_demo/style/blog-template.css" rel="stylesheet">';
+		        break;
+		    case 'ouyangtao404.github.com': 
+		        echo '<link media="screen" href="http://ouyangtao404.github.com/style/blog-template.css" rel="stylesheet">';
+		        break;
+		    default: 
+		        break; 
+		} 
+?>
 	<link media="screen" href="http://localhost:4000/jekyll_demo/style/blog-template.css" rel="stylesheet">
 	<!--<![endif]-->
 
