--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -90,81 +90,24 @@
 	<section class="content">
 				<article class="post-190 post type-post status-publish format-standard hentry category-front-end category-linux category-other tag-git tag-github tag-jekyll single postWrap commonWrap">
 			<div class="postContainer commonContainer">
-				<header class="header">
-					<h1 class="postTitle title">涛儿的第一个博文</h1>
-				</header>
-				<time class="time" datetime="2012-09-30" pubdate>
-					<span class="metaDate">十月 20, 2012</span>
-					<span class="metaTime">7:26 下午</span>
-				</time>
 				<div class="postContent">
 					{{ content }}
-				<p><a href=" http://chen.yanping.me/cn/blog/2012/03/18/github-pages-step-by-step/" target="_blank">Github Pages极简教程</a><br />
-				<a href="http://www.soimort.org/tech-blog/2011/11/19/introduction-to-jekyll_zh.html" target="_blank">像黑客一样写博客——Jekyll入门 </a><br />
-				<a href=" http://www.pizn.me/" target="_blank"><strong>PIZn</strong></a></p>
 				</div><!-- post content end -->
 				
 				<footer class="meta">
-					<p class="clearfix">
-						<span class="leftCol share">
-							Share To:
-							<a class="shareItem" href="javascript:void(0);" title="分享到Twitter" rel="nofollow" onclick="twitter();return false;">Twitter</a>
-							<a class="shareItem" href="javascript:void(0)" title="转播到新浪微博" rel="nofollow" onclick="sinaWeibo();return false;">Weibo</a>
-							<a href="javascript:void(0)" rel="nofollow" onclick="txWeibo();return false;" class="shareItem" title="转播到腾讯微博">t.qq</a>
-						</span>
-						<span class="rightCol metaCategory">Categories: <a href="http://ouyangtao404.github.com/category/front-end" title="查看 Front-end 中的全部文章" rel="category tag">Front-end</a>, <a href="http://ouyangtao404.github.com/category/linux" title="查看 linux 中的全部文章" rel="category tag">linux</a>, <a href="http://ouyangtao404.github.com/category/other" title="查看 other 中的全部文章" rel="category tag">other</a></span>
-					</p>
-					<p class="clearfix">
-						<span class="leftCol metaTags">Tags: <a href="http://ouyangtao404.github.com/tag/git" rel="tag">git</a> , <a href="http://ouyangtao404.github.com/tag/github" rel="tag">github</a> , <a href="http://ouyangtao404.github.com/tag/jekyll" rel="tag">jekyll</a></span>
-											</p>
 				</footer>
 			</div><!-- post container end -->
 		</article>
 		
 		<div id="comments" class="comment_box clearfix">
-	
-		
-	<!-- Comment Form -->
-		<div class="commonWrap">
-		<fieldset id="respond" class="commonContainer">
-			<header class="header">
-				<h1 class="title respond_title arrow_grey">Leave a Reply</h1>
-			</header>
-			<div id="cancel-comment-reply" class="cancel-comment-reply">
-				<small><a rel="nofollow" id="cancel-comment-reply-link" href="/github-page-jekyll.html#respond" style="display:none;">点击这里取消回复。</a></small>
-			</div>
-						<form action="http://ouyangtao404.github.com/wp-comments-post.php" method="post" id="commentform" class="commentform">
-								<div id="user_info" class="user_info">
-					<p>
-						<input type="text" name="author" class="user_name input" id="author" value="" size="22" tabindex="1" required placeholder="Name(required)" />
-						<label for="author" class="label">Name(<span class="required">*</span>)</label>
-					</p>
-					<p>
-						<input type="email" name="email" class="input" id="email" value="" size="22" tabindex="2" required placeholder="Email(required)" />
-						<label for="email" class="label">Email(<span class="required">*</span>)</label>
-					</p>
-					<p>
-						<input type="text" name="url" class="input" id="url" value="" size="22" tabindex="3" placeholder="website" />
-						<label for="url" class="label">Website</label>
-					</p>
-				</div>
-				
-				<p id="textarea"><textarea name="comment" id="comment" cols="30" rows="10" tabindex="4"></textarea></p>
-
-				<p><input name="submit" type="submit" class="input" id="submit" tabindex="5" value="Submit Comment" />
-				<input type='hidden' name='comment_post_ID' value='190' id='comment_post_ID' />
-				<input type='hidden' name='comment_parent' id='comment_parent' value='0' />
-				</p>
-				<p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="2b55301b41" /></p>			</form>
-				</fieldset>
-	</div><!-- commonWrap -->
-
-</div><!-- #comments end -->
+		</div><!-- #comments end -->
 	</section><!-- content -->
 </div>
 <footer class="theFooter clearfix singleFooter">
 
-	<p class="copyright"><a href="http://ouyangtao404.github.com/feed" title="RSS">RSS</a> | Theme <a class="themeName" href="http://ouyangtao404.github.com/" title="Optimus+">optimus+</a> design by <a href="http://jamiebicknell.tumblr.com/" rel="nofollow" title="J.Bicknell">J.Bicknell</a>|<script src="http://s94.cnzz.com/stat.php?id=4105057&web_id=4105057" language="JavaScript"></script></p>
+	<p class="copyright">
+		<a href="http://ouyangtao404.github.com/feed" title="RSS">RSS</a> | Theme <a class="themeName" href="http://ouyangtao404.github.com/" title="Optimus+">optimus+</a> design by <a href="http://jamiebicknell.tumblr.com/" rel="nofollow" title="J.Bicknell">J.Bicknell</a>|<script src="http://s94.cnzz.com/stat.php?id=4105057&web_id=4105057" language="JavaScript"></script>
+	</p>
 
 </footer>
 </body>
