--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -42,7 +42,7 @@
 			<div class="masthead">
 				<hgroup class="theHgroup">
 					<h1 class="logo">
-						<a title="水手涛儿" href="http://ouyangtao.github.com">【水手涛儿】- ouyangtao.github.com</a>
+						<a title="水手涛儿" href="http://ouyangtao404.github.com">【水手涛儿】- ouyangtao404.github.com</a>
 					</h1>
 					<h2 class="description">折腾的人生，折腾的人，折腾中成长~</h2>
 				</hgroup>
