提交一个基本完整的版本

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1356,7 +1356,7 @@ footer #footer-bottom {
 	        		<li class="block" style="">
 		        		<h4 class="heading">blog information</h4>
 		        		<span>博客字数：{{ content | number_of_words }}</span><br/>
-						<span>最后更新时间：{{ site.time | date_to_long_string }}</span><br/>
+						<span>最后更新时间：{{ site.time | date_to_string }}</span><br/>
 	        		</li>
 	        		<!--
 	        		<li class="block" style="">
