--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -7,7 +7,7 @@
 <!--[if !IE]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }}-坚强的水手</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- 响应式设计代码 -->
@@ -1341,13 +1341,29 @@ footer #footer-bottom {
 						{% if(page.cover) %}
 						<a href="javascript:void(0);" ><img src="{{ page.cover }}" style="width:560px;"/></a>
 						{% endif %}
-						<div class="entry-date">{{ page.date | date_to_long_string }}</div>
+						<div class="entry-date">{{ page.date | date_to_string }}</div>
 					</div>
 					<div class="excerpt">
 						<h1>{{ page.title }}</h1>
 						{{ content }}
 					</div>
 					<i class="tape"></i>
+					<!--评论start-->
+		           	<div id="disqus_thread"></div>
+			        <script type="text/javascript">
+			            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+			            var disqus_shortname = 'ouyangtao404'; // required: replace example with your forum shortname
+			
+			            /* * * DON'T EDIT BELOW THIS LINE * * */
+			            (function() {
+			                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+			                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+			                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			            })();
+			        </script>
+			        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+			        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+			        <!--评论end-->
 				</article>
 				
 				
@@ -1355,8 +1371,8 @@ footer #footer-bottom {
 				
 				<!-- page-navigation -->
 				<div class="page-navigation cf">
-					<div class="nav-next"><a href="{{ next }}">Older Entries</a></div>
-					<div class="nav-previous"><a href="{{ previous }}">Newer Entries</a></div>
+					<div class="nav-next"><a href="">Older Entries</a></div>
+					<div class="nav-previous"><a href="">Newer Entries</a></div>
 				</div>
 				<!--ENDS page-navigation -->
 					
