--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1315,7 +1315,7 @@ footer #footer-bottom {
 		<nav class="cf">
 			<div class="wrapper cf">
 				<ul id="nav" class="sf-menu">
-					<li><a href="index.html">HOME<i><b></b></i></a></li>
+					<li><a href="/index.html">HOME<i><b></b></i></a></li>
 				</ul>
 				<div id="combo-holder"></div>
 			</div>
