--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -7,7 +7,7 @@
 <!--[if !IE]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-    <title>{{ page.title }}-坚强的水手</title>
+    <title>{{ page.title }}-欧阳涛的博客</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- 响应式设计代码 -->
@@ -19,6 +19,11 @@
     <!--[if lt IE 9]><script src="http://a.tbcdn.cn/app/dp/s/html5/js/??html5shiv-min.js,modernizr-v2.5.3-min.js"></script><![endif]-->
     <!--[if gte IE 9]><!--><script src="http://a.tbcdn.cn/app/dp/s/html5/js/modernizr-v2.5.3-min.js"></script><!--<![endif]-->
     <script src="http://a.tbcdn.cn/??s/kissy/1.2.0/kissy-min.js,p/global/1.0/global-min.js,p/et/et.js?t=2012011120110301.js" type="text/javascript"></script>
+	<!--代码高亮-->
+	<link   href="../mods/core/default.css" type="text/css" rel="stylesheet" />
+	<link   href="../mods/code-high-light/prettify.css" type="text/css" rel="stylesheet" />
+    <script src="../mods/code-high-light/prettify.js" type="text/javascript"></script>
+    
 <style>
 /*inline*/
 div.tip-yellow {
@@ -1299,7 +1304,7 @@ footer #footer-bottom {
 
 </head>
 
-<body>
+<body onload="prettyPrint()">
 	<!-- HEADER -->
 	<header>
 		
@@ -1350,19 +1355,33 @@ footer #footer-bottom {
 					<i class="tape"></i>
 					<!--评论start-->
 		           	<div id="disqus_thread"></div>
-			        <script type="text/javascript">
-			            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-			            var disqus_shortname = 'ouyangtao404'; // required: replace example with your forum shortname
-			
-			            /* * * DON'T EDIT BELOW THIS LINE * * */
-			            (function() {
-			                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-			                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-			                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			            })();
-			        </script>
+		           	
+		           	<div id="disqus_container">
+			           	<a class="comment" href="javascript:void(0);">点击加载评论</a>
+			           	<script type="text/javascript">
+			           	var S = KISSY,
+			           		D = S.DOM,
+			           		E = S.Event,
+			           		_O = S.one;
+			           		
+				        _O('#disqus_container .comment').on('click', function(e) {
+				        	var tar = e.currentTarget;
+				        	D.remove(tar);
+				        	
+				        	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+				            var disqus_shortname = 'ouyangtao404'; // required: replace example with your forum shortname
+				
+				            /* * * DON'T EDIT BELOW THIS LINE * * */
+				            (function() {
+				                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+				                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+				                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+				            })();
+				        });
+				        </script>
+		           	</div>
+			        
 			        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-			        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 			        <!--评论end-->
 				</article>
 				
@@ -1446,6 +1465,8 @@ footer #footer-bottom {
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	
+	
+        
 </body>
 
 </html>
