--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <!--[if !IE]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }}-欧阳涛的博客</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- 响应式设计代码 -->
@@ -1356,7 +1356,7 @@ footer #footer-bottom {
 	        		<li class="block" style="">
 		        		<h4 class="heading">blog information</h4>
 		        		<span>博客字数：{{ content | number_of_words }}</span><br/>
-						<span>最后更新时间：{{ site.time | date_to_string }}</span><br/>
+						<span>最后更新时间：{{ site.time | date_to_long_string }}</span><br/>
 	        		</li>
 	        		<!--
 	        		<li class="block" style="">
@@ -1415,6 +1415,19 @@ footer #footer-bottom {
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	
+	<!--评论数显示相关js-->
+    <script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'ouyangtao404'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+    </script>
 </body>
 
 </html>
