--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -1,60 +1,5 @@
-<!doctype html>
-<!--[if lt IE 7]><html class="no-js ie ie6 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 7]><html class="no-js ie ie7 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 8]><html class="no-js ie ie8 lte9 lte8"> <![endif]-->
-<!--[if IE 9]><html class="no-js ie ie9 lte9"> <![endif]-->
-<!--[if gt IE 9]><html class="no-js"><![endif]-->
-<!--[if !IE]><!--><html><!--<![endif]-->
-<head>
-	<meta charset="utf-8">
-    <title>{{ page.title }}-欧阳涛的博客</title>
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!-- 响应式设计代码 -->
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="shortcut icon" type="image/x-icon" href="/img/ouyangtao.ico" />
-    <!-- html5reset and css3 -->
-    <link rel="stylesheet" href="http://a.tbcdn.cn/??p/global/1.0/global-min.css,app/dp/s/html5/css/common-min.css"/>
-    <!--[if lt IE 9]><script src="http://a.tbcdn.cn/app/dp/s/html5/js/??html5shiv-min.js,modernizr-v2.5.3-min.js"></script><![endif]-->
-    <!--[if gte IE 9]><!--><script src="http://a.tbcdn.cn/app/dp/s/html5/js/modernizr-v2.5.3-min.js"></script><!--<![endif]-->
-    <script src="http://a.tbcdn.cn/??s/kissy/1.2.0/kissy-min.js,p/global/1.0/global-min.js,p/et/et.js?t=2012011120110301.js" type="text/javascript"></script>
-	<!--代码高亮-->
-	<link   href="/mods/core/default.css" type="text/css" rel="stylesheet" />
-	<link   href="/mods/code-high-light/prettify.css" type="text/css" rel="stylesheet" />
-    <script  src="/mods/code-high-light/prettify.js" type="text/javascript"></script>
-
-	<!--<![endif]-->
-
-</head>
-
-<body onload="prettyPrint()">
-	<!-- HEADER -->
-	<header>
-		
-		<!-- header wrapper -->
-		<div class="wrapper cf">
-			<div id="logo">
-				<a href="index.html" ><img src="http://img01.taobaocdn.com/tps/i1/T1YeZdXlxiXXahu9j4-459-50.png" alt="" /></a>
-			</div>
-		</div><!-- ENDS header wrapper -->
-		
-		
-		
-		<!-- nav -->
-		<nav class="cf">
-			<div class="wrapper cf">
-				<ul id="nav" class="sf-menu">
-					<li><a href="/index.html">HOME<i><b></b></i></a></li>
-				</ul>
-				<div id="combo-holder"></div>
-			</div>
-		</nav>
-		<!-- ends nav -->
-			
-	</header>
-	<!-- ENDS HEADER -->
-	
+{% include head.php %}
+<!--head end-->	
 	
 	<!-- MAIN -->
 	<div role="main" id="main">
@@ -90,8 +35,7 @@
 			           		D = S.DOM,
 			           		E = S.Event,
 			           		_O = S.one;
-			           		
-				        _O('#disqus_container .comment').on('click', function(e) {
+			           _O('#disqus_container .comment').on('click', function(e) {
 				        	var tar = e.currentTarget;
 				        	D.remove(tar);
 				        	
@@ -105,6 +49,7 @@
 				                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 				            })();
 				        });
+				        
 				        </script>
 		           	</div>
 			        
@@ -125,75 +70,11 @@
 		    </div>
 			<!-- ENDS posts list -->			
 			
-			<!-- sidebar -->
-        	<aside id="sidebar">
-        		
-        		<ul>
-	        		<li class="block" style="">
-		        		<h4 class="heading">blog information</h4>
-		        		<span>博客字数：{{ content | number_of_words }}</span><br/>
-						<span>最后更新时间：{{ site.time | date_to_long_string }}</span><br/>
-	        		</li>
-	        		<!--
-	        		<li class="block" style="">
-		        		<h4 class="heading">Categories</h4>
-						<ul>
-							
-							<li class="cat-item"><a href="#" title="title">Habitant morbi<span class="post-counter"> (2)</span></a></li>
-						
-						</ul>
-	        		</li>
-	        		-->
-	        		
-        		
-        		</ul>
-        		
-        	</aside>
-			<!-- ENDS sidebar -->
+			{% include side-bar.php %}
 	  
 	  </div>
 	</div>
 	<!-- ENDS MAIN -->
-	
-	
-	<footer>
-	
-		<!-- wrapper -->
-		<div class="wrapper cf">
-		
-		
-			<!-- social -->
-			<div class="sb-holder cf">
-				<ul id="social-bar" class="cf">
-					<li class="left-corner"><i></i></li>
-					<li><a href="http://www.facebook.com"  title="Become a fan" ><img src="/img/social/Facebook.png"  alt="Facebook" /></a></li>
-					<li><a href="http://www.twitter.com" title="Follow my tweets" ><img src="/img/social/Twitter.png"  alt="twitter" /></a></li>
-					<li><a href="http://www.google.com"  title="Add to the circle" ><img src="/img/social/Google+.png" alt="Google plus" /></a></li>
-					<li class="right-corner"><i></i></li>
-				</ul>
-				
-				
-			</div>
-			<!-- ENDS social -->
-			
-			<div id="footer-bottom" style="display:none;">ouyangtao.github.com</div>
-		
-		</div><!-- ENDS wrapper -->
-		
-		
-		
 
-	</footer>
-
-
-	<!-- JavaScript at the bottom for fast page loading -->
-	
-	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	
-	
-        
-</body>
-
-</html>
+{% include foot.php %}
 
