个人信息&分享

--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -23,6 +23,10 @@
 					</div>
 					<i class="tape"></i>
 					
+					<!--分享功能 start-->
+					{% include share.php %}
+					<!--分享功能   end-->
+					
 				</article>
 				
 				<article class="commit">
