--- a/mods/core/default.css
+++ b/mods/core/default.css
@@ -1,4 +1,21 @@
 /**
+ * 	分享交互部分
+ */
+.blog-share{
+	height:40px;
+	padding-top:15px;
+}
+
+/**
+ * 	右栏 sidebar
+ */
+#sidebar .me{
+    background: none repeat scroll 0 0 #F3E4C8;
+    box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+}
+
+/**
  * 	博客list页面样式
  */
 .blog-list .atc-list a{
@@ -53,6 +70,7 @@ pre.prettyprint {
 }
 pre.prettyprint ol li{
 	height:16px;
+	white-space:nowrap; 
 }
 
 /**
@@ -832,7 +850,7 @@ nav {
 }
 #main .wrapper {
     color: #444444;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.5em;
     margin-bottom: 50px;
     margin-top: 60px;
