--- a/_layouts/blog-template.html
+++ b/_layouts/blog-template.html
@@ -29,7 +29,7 @@
 					
 				</article>
 				
-				<article class="commit">
+				<article class="comment">
 					<!--评论start-->
 		           	<div id="disqus_container">
 			           	<a class="comment" href="javascript:void(0);">点击加载评论</a>
