--- a/mods/core/default.css
+++ b/mods/core/default.css
@@ -36,6 +36,7 @@
 	float:right;
 }
 
+#posts-list article.comment .comment,
 .blog-list a {
 	color:#a83e2a;
 	-webkit-transition: color 0.1s ease-in,background 0.1s ease-out;
@@ -43,6 +44,7 @@
     -o-transition:      color 0.1s ease-in,background 0.1s ease-out;
     transition:        	color 0.1s ease-in,background 0.1s ease-out;
 }
+#posts-list article.comment .comment:hover,
 .blog-list a:hover {
 	color:#fff;
 	background:#a83e2a;
@@ -1039,8 +1041,11 @@ nav {
     padding: 30px;
     position: relative;
 }
-#posts-list article.commit{
+#posts-list article.comment{
 	margin-top:-45px;
+}
+#posts-list article.comment .comment{
+	font-size:14px;
 }
 #posts-list article .tape {
     background: url("/img/tape.png") no-repeat scroll left top transparent;
