--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,8 @@
 				{{ content }}
 				<!--内容 end-->
 				
-				<!-- page-navigation -->
-				<div class="page-navigation cf">
-					<div class="nav-next"><a href="{{ next }}">Older Entries</a></div>
-					<div class="nav-previous"><a href="{{ previous }}">Newer Entries</a></div>
-				</div>
-				<!--ENDS page-navigation -->
+				{% include paginate.php %}
+				
 					
 						
 		    </div>
